Fixed a bug of body bg gradient not stretching till the end of the page

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,10 +5,8 @@ html {
 	height: 100%;
 }
 body {
-//	max-width: 26em;
 	margin: 0;
 	height: 100%;
-//	padding: 3em;
 }
 .site-title, .tagline, .call-to-action {
 	text-align: center;
@@ -21,5 +19,6 @@ body {
 }
 .page-wrap {
 	width: 85%;
-	margin: 90px auto;
+	margin: 0 auto;
+	padding-top: 90px;
 }
